# ContextFire-VLM

./: .gitignore  1_convert_type_rename.ipynb  2_images_augmentation.ipynb  3_auto_label.ipynb  4_data_cleaning.ipynb  5_eda.ipynb  FIRENET.csv  LLM_test.ipynb  README.md  SYN_FIRE.csv  app.py  auto_label.ipynb  data_cleaning.ipynb  data_prep.py  eda.ipynb  fine_tune_llm.ipynb  fine_tune_qwen2_5vl.ipynb  fire_captions_combined.csv  fire_classification_data_1000.csv  fire_image_captions.csv  fire_image_captions_sorted.csv  fire_image_captions_v2.csv  hello.ipynb  hello.py  image_inference.py  index.html  internvl3_annotations.jsonl  labels.csv  labels_v2.csv  main.py  mp4converter.py  new_labels.csv  original_fire_captions_combined.csv  output_video5.mov  prototype.ipynb  pyproject.toml  qwen2.5_vl_3B_FINE_TUNED_results.csv  qwen_test.json  qwen_train.json  qwen_val.json  (+15 more)
data_preprocessing_notebooks/: 3_auto_label.ipynb  4_data_cleaning.ipynb  5_eda.ipynb
model_survey/: gemma3_4B_IT_GGUF.ipynb  gemma3_4B_IT_GGUF_results.csv  internvl3_1B.ipynb  internvl3_1B_results.csv  internvl3_2B.ipynb  main.py  qwen2.5_vl_3B_gguf.ipynb  qwen2.5_vl_3B_results.csv  qwen2_vl_2B.ipynb  qwen2_vl_2B_results.csv
model_survey_notebooks/: SmolVLM-256M-GGUF.ipynb  SmolVLM-500M-Instruct-GGUF.ipynb  gemma3_4B_IT_GGUF.ipynb  gemma3_4B_IT_GGUF_results.csv  internvl3_1B.ipynb  internvl3_2B_results.csv  qwen2.5_vl_3B.ipynb  qwen2.5_vl_3B_gguf.ipynb  qwen2.5_vl_3B_results.csv  qwen2_vl_2B.ipynb
result_ablation/: internvl3-2b-hf_parallel_results.csv  metrics_result.txt  (+1 more)
scripts/: ablation_study.py  (+19 more)
(+6389 files in other folders)
