[project]
name = "contextfire-vlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.0",
    "bitsandbytes>=0.46.1",
    "matplotlib>=3.10.8",
    "qwen-vl-utils>=0.0.14",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers>=4.49.0",
]
