[project]
name = "contextfire-vlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.0",
    "bitsandbytes>=0.46.1",
    "matplotlib>=3.10.8",
    "qwen-vl-utils>=0.0.14",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "peft>=0.18.1",
    "qwen-vl-utils>=0.0.14",
    "transformers>=5.3.0",
    "trl>=0.29.0",
]
